--- a/src/manifest.json
+++ b/src/manifest.json
@@ -19,7 +19,7 @@
     },
     "content_scripts": [
         {
-            "matches": ["https://business.facebook.com/*"],
+            "matches": ["https://business.facebook.com/*", "https://www.facebook.com/ads/*"],
             "js": ["js/jquery.min.js", "js/content-script.js"],
             "css": ["css/custom.css"],
             "run_at": "document_start"
